--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,24 @@
-Flask
-Flask-SQLAlchemy
-Flask-GraphQL
-graphene
-graphene-sqlalchemy
-psycopg2-binary
-python-dotenv
+aniso8601==7.0.0
+blinker==1.8.2
+click==8.1.7
+Flask==3.0.3
+Flask-GraphQL==2.0.1
+Flask-SQLAlchemy==3.1.1
+graphene==2.1.9
+graphene-sqlalchemy==2.1.0
+graphql-core==2.3.2
+graphql-relay==2.0.1
+graphql-server-core==1.2.0
+greenlet==3.1.1
+itsdangerous==2.2.0
+Jinja2==3.1.4
+MarkupSafe==3.0.2
+promise==2.3
+psycopg2-binary==2.9.10
+python-dotenv==1.0.1
+Rx==1.6.3
+singledispatch==4.1.0
+six==1.16.0
+SQLAlchemy==2.0.36
+typing_extensions==4.12.2
+Werkzeug==3.1.2
