--- a/requirements.txt
+++ b/requirements.txt
@@ -22,3 +22,7 @@ six==1.16.0
 SQLAlchemy==2.0.36
 typing_extensions==4.12.2
 Werkzeug==3.1.2
+
+Flask-Bcrypt~=1.0.1
+Flask-JWT-Extended~=4.7.0
+Flask-Cors~=5.0.0
