--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,36 @@
-aniso8601==7.0.0
-blinker==1.8.2
+aniso8601==9.0.1
+bcrypt==4.2.1
+blinker==1.9.0
 click==8.1.7
-Flask==3.0.3
+ecdsa==0.19.0
+Flask==3.1.0
+Flask-Bcrypt==1.0.1
+Flask-Cors==5.0.0
 Flask-GraphQL==2.0.1
+Flask-JWT-Extended==4.7.1
 Flask-SQLAlchemy==3.1.1
-graphene==2.1.9
+graphene==3.4.3
 graphene-sqlalchemy==2.1.0
-graphql-core==2.3.2
-graphql-relay==2.0.1
-graphql-server-core==1.2.0
+graphql-core==3.2.5
+graphql-relay==3.2.0
+graphql-server-core==1.1.1
 greenlet==3.1.1
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==3.0.2
+packaging==24.2
+pip-review==1.3.0
 promise==2.3
 psycopg2-binary==2.9.10
+pyasn1==0.6.1
+PyJWT==2.10.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
-Rx==1.6.3
+python-jose==3.3.0
+rsa==4.9
+Rx==3.2.0
 singledispatch==4.1.0
 six==1.16.0
 SQLAlchemy==2.0.36
 typing_extensions==4.12.2
-Werkzeug==3.1.2
-
-Flask-Bcrypt~=1.0.1
-Flask-JWT-Extended~=4.7.0
-Flask-Cors~=5.0.0
+Werkzeug==3.1.3
